# convergio-local

./: .claudeignore  .cursorignore  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OVERNIGHT-STATUS-2026-05-02.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  commitlint.config.js  deny.toml  lefthook.yml  release-please-config.json
crates/convergio-api/: AGENTS.md  Cargo.toml  README.md
crates/convergio-api/src/: action.rs  lib.rs  tests.rs
crates/convergio-brand/: AGENTS.md  Cargo.toml
crates/convergio-brand/src/: banner.rs  boot.rs  claim.rs  glitch.rs  gradient.rs  lib.rs  palette.rs  theme.rs
crates/convergio-bus/: AGENTS.md  Cargo.toml  README.md
crates/convergio-bus/migrations/: 0101_bus_init.sql  0102_bus_sequence.sql  0103_system_topics.sql
crates/convergio-bus/src/: bus.rs  bus_inspection.rs  bus_system.rs  error.rs  lib.rs  migrate.rs  model.rs
crates/convergio-bus/tests/: lifecycle.rs  poll_filtered.rs  system_topics.rs
crates/convergio-cli/: AGENTS.md  Cargo.toml  README.md
crates/convergio-cli/src/: main.rs
crates/convergio-cli/src/commands/: about.rs  agent.rs  agent_spawn.rs  agent_spawn_wire.rs  audit.rs  bus.rs  capability.rs  capability_types.rs  coherence.rs  coherence_body.rs  coherence_body_scan.rs  coherence_parse.rs  crdt.rs  dash.rs  demo.rs  dispatch.rs  docs.rs  docs_generators.rs  docs_generators_crate.rs  docs_rewrite.rs  doctor.rs  evidence.rs  graph.rs  graph_render.rs  health.rs  mcp.rs  mod.rs  plan.rs  plan_triage.rs  pr.rs  pr_diff.rs  pr_parse.rs  pr_render.rs  pr_sync.rs  pr_sync_parse.rs  service.rs  session.rs  session_pre_stop.rs  session_pre_stop_run.rs  session_render.rs  (+12 more)
crates/convergio-cli/tests/: cli_capability.rs  cli_pr_stack.rs  cli_service.rs  cli_smoke.rs  cli_smoke_agent.rs  cli_smoke_setup.rs  cli_smoke_status.rs  cli_task_create.rs  cli_thor_only_done.rs  cli_update.rs
crates/convergio-db/: AGENTS.md  Cargo.toml  README.md
crates/convergio-db/src/: error.rs  lib.rs  pool.rs
crates/convergio-durability/: AGENTS.md  Cargo.toml
crates/convergio-durability/migrations/: 0001_init.sql  0002_audit_sequence.sql  0003_plan_project.sql  0004_crdt_core.sql  0005_workspace_coordination.sql  0006_agent_registry.sql  0007_capability_registry.sql  0008_task_reaper_indexes.sql  0009_task_timing.sql  0010_plan_pr_links.sql  0011_task_runner_fields.sql
crates/convergio-durability/src/: agent_facade.rs  capability_facade.rs  capability_signature.rs  crdt_facade.rs  error.rs  facade.rs  facade_admin.rs  facade_plan_transitions.rs  facade_retry.rs  facade_transitions.rs  lib.rs  migrate.rs  model.rs  reaper.rs  workspace_facade.rs
crates/convergio-durability/src/audit/: canonical.rs  (+4 more)
crates/convergio-durability/tests/: agent_current_task_sync.rs  agents.rs  audit_tamper.rs  capabilities.rs  crdt_conflict_gate.rs  crdt_core.rs  crdt_merge.rs  gate_refusals.rs  gates.rs  no_debt_gate.rs  no_debt_gate_allowlist.rs  no_debt_gate_multilang.rs  no_secrets_gate.rs  no_stub_gate.rs  plan_rename.rs  post_hoc.rs  reaper.rs  retry.rs  wave_sequence_gate.rs  wire_check_gate.rs  workspace.rs  zero_warnings_gate.rs
crates/convergio-executor/: AGENTS.md  Cargo.toml  README.md
crates/convergio-executor/src/: defaults.rs  error.rs  executor.rs  lib.rs
crates/convergio-executor/tests/: dispatch.rs
crates/convergio-graph/: AGENTS.md  Cargo.toml
crates/convergio-graph/migrations/: 0600_graph_nodes_edges.sql
crates/convergio-graph/src/: build.rs  cluster.rs  cluster_io.rs  doc_link.rs  drift.rs  error.rs  lib.rs  meta.rs  model.rs  parse.rs  query.rs  query_adrs.rs  query_hints.rs  query_match.rs  store.rs  tokens.rs
crates/convergio-graph/tests/: query.rs  store.rs
crates/convergio-i18n/: AGENTS.md  Cargo.toml  README.md
crates/convergio-i18n/src/: bundle.rs  error.rs  lib.rs  locale.rs
crates/convergio-i18n/tests/: coverage.rs
crates/convergio-lifecycle/: AGENTS.md  Cargo.toml  README.md
crates/convergio-lifecycle/migrations/: 0201_lifecycle_init.sql
crates/convergio-lifecycle/src/: error.rs  lib.rs  migrate.rs  model.rs  supervisor.rs  watcher.rs
crates/convergio-lifecycle/tests/: spawn.rs  watcher.rs
crates/convergio-mcp/: AGENTS.md  Cargo.toml  README.md
crates/convergio-mcp/src/: actions.rs  bridge.rs  bus_actions.rs  e2e_tests.rs  help.rs  http.rs  main.rs
crates/convergio-planner/: AGENTS.md  Cargo.toml  README.md
crates/convergio-planner/src/: error.rs  heuristic.rs  lib.rs  opus.rs  planner.rs  schema.rs
crates/convergio-planner/tests/: solve.rs
crates/convergio-runner/: AGENTS.md  Cargo.toml
crates/convergio-runner/src/: command.rs  error.rs  kind.rs  lib.rs  profile.rs  prompt.rs  registry.rs  runner.rs  runner_config.rs
crates/convergio-runner/tests/: runner_argv.rs
crates/convergio-server/: AGENTS.md  Cargo.toml  README.md
crates/convergio-server/src/: app.rs  capability_install.rs  error.rs  lib.rs  main.rs
crates/convergio-server/tests/: e2e_agent_registry.rs  e2e_agents.rs  e2e_audit.rs  e2e_bus.rs  e2e_capabilities.rs  e2e_capability_install.rs  e2e_capability_signatures.rs  e2e_context.rs  e2e_crdt.rs  e2e_durability.rs  e2e_evidence_remove.rs  e2e_full_stack.rs  e2e_graph.rs  e2e_plan_transition.rs  e2e_planner_capability.rs  e2e_quickstart.rs  e2e_system_messages.rs  e2e_thor_only_done.rs  e2e_timing_cache.rs  e2e_triage.rs  e2e_two_agents_coordinate.rs  e2e_workspace.rs  e2e_workspace_merge.rs
crates/convergio-thor/: AGENTS.md  Cargo.toml  README.md
crates/convergio-thor/src/: error.rs  lib.rs  pipeline.rs  thor.rs
crates/convergio-thor/tests/: pipeline_hardening.rs  validate.rs  validate_wave.rs
crates/convergio-tui/: AGENTS.md  Cargo.toml  README.md
crates/convergio-tui/src/: client.rs  client_gh.rs  header_banner.rs  keymap.rs  lib.rs  mode.rs  plan_counts.rs  render.rs  scope.rs  state.rs  theme.rs  tick.rs
crates/convergio-tui/tests/: detail_render.rs  plan_sort.rs
crates/convergio-worktree/: Cargo.toml  README.md
crates/convergio-worktree/src/: lib.rs
(+165 files in other folders)
