[workspace]
members = [
    "crates/convergio-db",
    "crates/convergio-durability",
    "crates/convergio-bus",
    "crates/convergio-lifecycle",
    "crates/convergio-server",
    "crates/convergio-cli",
    "crates/convergio-planner",
    "crates/convergio-thor",
    "crates/convergio-executor",
    "crates/convergio-i18n",
    "crates/convergio-api",
    "crates/convergio-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.78"
authors = ["Roberto D'Angelo <roberdan@fightthestroke.org>"]
license = "LicenseRef-Convergio-Community-1.3"
repository = "https://github.com/Roberdan/convergio-local"
homepage = "https://github.com/Roberdan/convergio-local"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "migrate",
    "json",
    "chrono",
    "uuid",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Errors
thiserror = "1"
anyhow = "1"

# IDs / time / hashing
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
flate2 = "1"
tar = "0.4"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (CLI)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.5", default-features = false, features = ["server", "macros", "transport-io"] }

# Test helpers
tempfile = "3"

# Internal crates (workspace path deps)
convergio-db = { path = "crates/convergio-db" }
convergio-durability = { path = "crates/convergio-durability" }
convergio-bus = { path = "crates/convergio-bus" }
convergio-lifecycle = { path = "crates/convergio-lifecycle" }
convergio-server = { path = "crates/convergio-server" }
convergio-planner = { path = "crates/convergio-planner" }
convergio-thor = { path = "crates/convergio-thor" }
convergio-executor = { path = "crates/convergio-executor" }
convergio-i18n = { path = "crates/convergio-i18n" }
convergio-api = { path = "crates/convergio-api" }

[workspace.lints.rust]
missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
# unwrap_used / expect_used / panic are NOT denied here — they are common
# in tests and would force boilerplate everywhere. Production code is
# reviewed manually for these. See AGENTS.md § "Code style".

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
