[package]
name = "convergio-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Layer 2 of Convergio: persistent agent message bus (topic + direct + ack), scoped per plan."
readme = "README.md"
keywords = ["agents", "messaging", "bus"]
categories = ["asynchronous"]

[lints]
workspace = true

[dependencies]
convergio-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
