[package]
name = "convergio-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "cvg — pure HTTP client for the Convergio daemon."
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "cvg"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
