[package]
name = "convergio-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "cvg — pure HTTP client for the Convergio daemon."
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "cvg"
path = "src/main.rs"

[dependencies]
convergio-i18n = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
cargo_metadata = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
