[package]
name = "convergio-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite database pool for the local Convergio runtime."
readme = "README.md"
keywords = ["agents", "durability", "sqlite"]
categories = ["database"]

[lints]
workspace = true

[dependencies]
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
