[package]
name = "convergio-lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Layer 3 of Convergio: spawn, supervise, heartbeat and reap long-running agent processes."
readme = "README.md"
keywords = ["agents", "supervisor", "lifecycle"]
categories = ["asynchronous", "os"]

[lints]
workspace = true

[dependencies]
convergio-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
