[package]
name = "convergio-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP bridge for local Convergio daemon."
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "convergio-mcp"
path = "src/main.rs"

[dependencies]
convergio-api = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
