[package]
name = "convergio-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local HTTP daemon for Convergio."
readme = "README.md"

[lints]
workspace = true

[[bin]]
name = "convergio"
path = "src/main.rs"

[dependencies]
convergio-db = { workspace = true }
convergio-durability = { workspace = true }
convergio-bus = { workspace = true }
convergio-lifecycle = { workspace = true }
convergio-planner = { workspace = true }
convergio-thor = { workspace = true }
convergio-executor = { workspace = true }

axum = { workspace = true }
clap = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
